--- a/src/components/Location/index.css
+++ b/src/components/Location/index.css
@@ -239,9 +239,8 @@
 .Location-mapMobile {
   width: 100%;
   height: 480px;
-  padding: 60px 60px 0 0;
+  padding: 60px 0 60px 0;
 }
-
 
 .Location-romanLegion {
   width: 100%;
@@ -380,6 +379,26 @@
   .Location-accommodations .Location-sectionBackground {
     margin-right: -20px;
   }
+
+  .Location-mapMobile {
+    padding: 60px 60px 0 0;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .Location-map {
+    display: inline;
+
+    width: 100%;
+    height: 480px;
+
+    margin-bottom: 60px;
+    padding: 60px 60px 0 0;
+  }
+
+  .Location-mapMobile {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 1441px) {
@@ -393,16 +412,5 @@
     margin: 0;
 
     width: 100%;
-  }
-
-  .Location-map {
-    display:inline;
-    width: 100%;
-    height: 480px;
-    margin-bottom: 60px;
-  }
-
-  .Location-mapMobile {
-    display: none;
   }
 }
