--- a/src/components/Sponsors/index.css
+++ b/src/components/Sponsors/index.css
@@ -28,6 +28,8 @@
   background-position: bottom center;
   background-image: url('./cave.svg');
   background-repeat: no-repeat no-repeat;
+
+  overflow: hidden;
 }
 
 .Sponsors-bottomGroup {
